0.9.3
	- Added Java Properties management in JSmoothGen
	- Added variable management for java properties in wrappers 
	- Fixed bug: incorrect Sun's jre.exe/java.exe 1.1 classpath
	- Fixed minor bug: FileUtils::recursiveSearch method scanning
	files instead of just the directories
	- Fixed major bug: *.jar files not added to classpath for Sun's
	JRE 1.1
	- Fixed bug #801407:Relative directory stuff seems confused by
	multiple drives
	- Fixed bug #803979: Windows size/position not retained between
	sessions
	- Fixed bug #801411: Classpath area UI details
	- Fixed bug #801408: manifest defined main-class ignored
	- Added Class Chooser Dialog in Java Application panel
	- Added splash screen (displays name and version).
	- Added maximum memory and initial memory setting support
	
0.9.2 (5 Sept 2003)
	- Fixed a bug that prevented jsmoothgen to compile if the JIMI API
	is not in the path

0.9.1 (03 Sept 2003)
	- Added the Console Wrapper
	- Fixed a bug on the Windowed Wrapper (java.exe was called instead of javaw.exe)
	- Fixed the broken icon generation
	- Added JIMI library support (optional)
	- Fixed several minor bugs

0.9 (28 Aug 2003)
	- First public release
	- Window Wrapper available