@@ -6,7 +6,7 @@ Open=1
 Top=1
 CursorCol=1
 CursorRow=36
-TopLine=28
+TopLine=39
 LeftChar=1
 [Editor_1]
 Open=1
