@@ -18,8 +18,8 @@ LeftChar=1
 [Editor_2]
 Open=1
 Top=1
-CursorCol=19
-CursorRow=152
+CursorCol=21
+CursorRow=151
 TopLine=146
 LeftChar=1
 [Editor_3]
